--- a/src/css/pages/home.module.css
+++ b/src/css/pages/home.module.css
@@ -4,7 +4,7 @@
   height: 80vh;
   min-width: var(--min-width);
   min-height: 500px;
-  background-image: url(/images/eldoret.jpg);
+  background-image: url(/images/eldoret1.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
