--- a/src/css/pages/sports.module.css
+++ b/src/css/pages/sports.module.css
@@ -1,5 +1,5 @@
 .page-header#sports-page-header {
-  background-image: url(/images/sport2.jpg);
+  background-image: url(/images/sports.png);
 }
 
 @media screen and (max-width: 800px) {
