--- a/src/css/pages/parties.module.css
+++ b/src/css/pages/parties.module.css
@@ -1,5 +1,5 @@
 .page-header#parties-page-header {
-  background-image: url(/images/poly.jpeg);
+  background-image: url(/images/poly.jpg);
 }
 
 /* .political-leaderboard,
